--- a/source/_posts/常用网站推荐.md
+++ b/source/_posts/常用网站推荐.md
@@ -1,6 +1,6 @@
 ---
 title: 常用 website
-# cover: https://cdn.jsdelivr.net/gh/FE-ng/picGo/blog/20210608112043.png
+cover: https://cdn.jsdelivr.net/gh/FE-ng/picGo/blog/20210616113743.png
 categories:
   - 推荐
 tags:
