feat(containers): 增加参考网站

--- a/source/_posts/常用网站推荐.md
+++ b/source/_posts/常用网站推荐.md
@@ -103,5 +103,43 @@ asciiFlow
 
 {% link 前端常用插件、工具类库汇总 https://juejin.cn/post/6844903683411410951 https://cdn.jsdelivr.net/gh/FE-ng/picGo/blog/20210621150142.png %}
 
+- [Collect UI](http://collectui.com/designs) 画廊是一个免费的在线资源，用于每日 UI 设计灵感。 目前，它有 6500 多个条目，并且持续保持更新最新内容。
+
+在边栏中，有做分类。包括 404 页面、登陆/登出、购物车、日历、视频播放器等。如果你想在某方便需求灵感，然后用于你的公司项目或者个人项目，我想是会有很大的帮助的。
+<img class="image800" src="https://cdn.jsdelivr.net/gh/FE-ng/picGo/blog/20210621152333.png"  alt="效果图" />
+
+- [Colordot](https://color.hailpixel.com/)
+  有时候我们想寻求一个自己喜欢的颜色（有点像起一个自己满意的昵称），却没有灵感，这时候我们就可以去 Colordot 网页区域内随意滑动鼠标，可以产生不同的色彩。确定一个色彩，再随意滑动产生下一个色彩，直到找到自己满意的配色。
+  <img class="image800" src="https://cdn.jsdelivr.net/gh/FE-ng/picGo/blog/20210621152528.png"  alt="效果图" />
+
+- [FontSpark](https://fontspark.app/)
+  FontSpark 是一个帮助有字体选择困难症的用户打造的选择字体的网站，用户只需要输入所需要展示的文字即可获得网站推荐的字体，包括字体类型和大小。 对于推荐的字体不是很满意的话，点击 Generate 按钮刷新即可。
+  <img class="image800" src="https://cdn.jsdelivr.net/gh/FE-ng/picGo/blog/20210621152716.png"  alt="效果图" />
+
+- [The Noun Project](https://thenounproject.com/)
+  The Noun Project 网站专门提供高品质、可辨识性强的 icon，这些 icon 没有很炫酷的设计，通常只用单色来呈现，使用者却能很容易地辨别出它要传达的意思。
+  目前 NounProject 提供超过 200 万的 icon 供使用者免费下载，且持续在更新中，如果你需要某种 icon，却一直没有找到合适的，不妨到这个网站来走走。
+  <img class="image800" src="https://cdn.jsdelivr.net/gh/FE-ng/picGo/blog/20210621152813.png"  alt="效果图" />
+
+- [unDraw](https://undraw.co/illustrations)  
+  是由希腊设计师 Katerina Limpitsouni 开发的一套开源矢量插图库，在这个网站上有超过 1000 个扁平矢量插画供你下载使用。 如果你在做个人网站，但对于插画没有灵感，或许你可以来看看。  
+  <img class="image800" src="https://cdn.jsdelivr.net/gh/FE-ng/picGo/blog/20210621152934.png"  alt="效果图" />
+
+- [CSS Tricks](https://css-tricks.com/)
+  CSS Tricks 是一个国外的优秀前端开发博客，主要分享使用 CSS 样式的技巧、经验和教程等。 该网站不断的在更新一些优秀的教程和技巧，为前端社区做出了具大的贡献。我也一直在这上面学习，让我在 CSS 方面视野拓宽了很多。  
+  <img class="image800" src="https://cdn.jsdelivr.net/gh/FE-ng/picGo/blog/20210621153157.png"  alt="效果图" />
+
+- [iHateRegex](https://ihateregex.io/)
+  对于开发人员来说，正则表达式是会被经常用到的，很多类型复杂的字符串都可以用它匹配出来，但唯一但缺点是编写起来很困难，不仅需要熟练掌握规则，还需要花时间编写、调试。
+  iHateRegex 就是这样一个帮你解决书写正则表达式烦恼的神器。  
+  iHateRegex 是一个在线开源工具，可快速检索并匹配到合适的正则表达式，帮你完成如用户名、邮箱、日期、手机号码、密码等常见规则的验证。
+  当然你也可以看到它内部的匹配过程，这有助于加深你的理解。  
+  <img class="image800" src="https://cdn.jsdelivr.net/gh/FE-ng/picGo/blog/20210621153310.png"  alt="效果图" />
+
 https://sixdegree.github.io/2016/01/02/Hexo.html
 <img class="image400" src="https://www.codewars.com/users/FE-ng/badges/large"  alt="效果图" />
+
+参考文献:
+作者：前端森林
+链接：https://juejin.cn/post/6854573221417582600
+来源：掘金
