feat(containers): 增加常用网站推荐

--- a/source/_posts/常用网站推荐.md
+++ b/source/_posts/常用网站推荐.md
@@ -136,6 +136,35 @@ asciiFlow
   当然你也可以看到它内部的匹配过程，这有助于加深你的理解。  
   <img class="image800" src="https://cdn.jsdelivr.net/gh/FE-ng/picGo/blog/20210621153310.png"  alt="效果图" />
 
+- [Three.js](https://threejs.org/)
+  Three 这个流行的库目前突破了 72K Star，是创建一个易于使用，轻量级，3D 库默认的 WebGL 渲染器。在示例中，该库还提供了画布 2D、SVG 和 CSS3D 渲染器。threejs 可以将它理解成 three + js，three 表示 3D 的意思，js 表示 javascript 的意思。那么合起来，three.js 就是使用 javascript 来写 3D 程序的意思。Three.js 是一个伟大的开源 WebGL 库,WebGL 允许 JavaScript 操作 GPU，在浏览器端实现真正意义的 3D。
+  如果我们需要使用 Threejs 来绘图，只需要创建一个最小绘图环境即可。Threejs 在底层其实还是调用 html5 中的 canvas api 来实现绘图的。但和我们一般绘制 2D 图像不同，该库提供 canvas，svg，CSS3D 和 WebGL 渲染器，使我们能够在设备和浏览器之间创建丰富的交互式体验。Threejs 在顶层对 3D 绘图所需的各种元素（例如场景，摄影机，灯光，几何图像，材质等）进行了封装
+- [Anime.js](https://animejs.com/)
+  Anime 库目前已拥有 33K Star，Anime 是一个 JavaScript 动画库，可与 CSS 属性，单个 CSS 转换，SVG 或任何 DOM 属性以及 JavaScript 对象一起使用。 该库使您可以链接多个动画属性，将多个实例同步在一起，创建时间轴等等。
+- [Mo.js](https://mojs.github.io/) 这个库达到 15K Star，是用于网络的运动图形工具带，具有简单的声明性 API，跨设备兼容性和超过 1500 个单元测试。 您可以在 DOME 或 SVG DOME 周围移动内容，或创建唯一的 mo.js 对象。 尽管文档很少，但示例很多，这是 CSS 技巧的介绍。
+  Mo.js 有着良好的兼容性：
+  Chrome 4+
+  Firefox 4+
+  Opera 11.5+
+  Safari 4+
+  IE 9+
+- [Velocity](http://velocityjs.org/)
+  Velocity 是一个快速的 Javascript 动画引擎，具有与 jQuery 的$.animate()相同的 API，目前已拥有 16K Star。它具有彩色动画、转换、循环、缩放、SVG 支持和滚动等功能。既然与 JQ 大法 API 基本一致，那对我们的小伙伴来说简直是开箱即用哇，根本都不用熟悉新的 API 直接一把梭了~
+
+- [popmotion](https://popmotion.io/pose/examples/)
+  这个功能性动画库目前已有 17K Star，整个包大小却仅有 11KB，精简极致的一个动画库。 它允许开发人员根据动作创建动画和交互，这些动作是可以启动和停止的值流，并使用 CSS，SVG，React，Three.js 和任何接受数字作为输入的 API 进行创建。
+  popmotion 官网提供了丰富和详尽的示例
+  包括了 Vue\React 等样例展示,该动画库相对简介易入手，完成基本业务动效绰绰有余，建议刚入门的小伙伴可以去趟趟水
+
+- [Typed.js](https://github.com/mattboldt/typed.js)
+  Typed 是一个专注打字动画的库，目前拥有 9K Star。可以让您以选定的速度为字符串创建打字动画。 您还可以在页面上放置 HTML div 并读取它，以允许搜索引擎和禁用 JavaScript 的用户访问。它既受欢迎又出奇的有用。下面我们简单写了个样例
+
+- [Animate(css)](https://animate.style/)
+  animate.css 是一个使用 CSS3 的 animation 制作的动画效果的 CSS 集合，里面预设了很多种常用的动画，且使用非常简单。目前已拥有 63K Star，是前端友人必不可少的前端 CSS 动画库之一，所有动效即时预览，拿来即用，非常方便。
+
+- [Hover (css)](http://ianlunn.github.io/Hover/)
+  Hover 是一个专门提供 CSS 的 hover 动效的库，目前已有 22K Star，悬停提供了 CSS3 支持的悬停效果的集合，可应用于链接、按钮、徽标、SVG、特色图像和更多，可用于 CSS、Sass 和更少。您可以复制和粘贴您想在自己的样式表中使用的效果，或者直接引用样式表。
+
 https://sixdegree.github.io/2016/01/02/Hexo.html
 <img class="image400" src="https://www.codewars.com/users/FE-ng/badges/large"  alt="效果图" />
 
@@ -143,3 +172,8 @@ https://sixdegree.github.io/2016/01/02/Hexo.html
 作者：前端森林
 链接：https://juejin.cn/post/6854573221417582600
 来源：掘金
+
+作者：前端 Sneaker
+链接：https://juejin.cn/post/6844904016292347918
+来源：掘金
+著作权归作者所有。商业转载请联系作者获得授权，非商业转载请注明出处。
