--- a/source/_posts/常用网站推荐.md
+++ b/source/_posts/常用网站推荐.md
@@ -168,6 +168,9 @@ asciiFlow
 
 - [20 个免费精美图片站](http://liujinkai.com/2019/07/25/free-image-website/)
 
+- [渐进色配色网站](https://webgradients.com/)
+- [在线工具箱](http://www.atoolbox.net/)
+
 https://sixdegree.github.io/2016/01/02/Hexo.html
 <img class="image400" src="https://www.codewars.com/users/FE-ng/badges/large"  alt="效果图" />
 
