feat(containers): 增加常用的娱乐网站

--- a/source/_posts/常用网站推荐.md
+++ b/source/_posts/常用网站推荐.md
@@ -172,9 +172,18 @@ asciiFlow
 - [在线工具箱](http://www.atoolbox.net/)
 
 - [拷贝兔](https://cp.anyknew.com/)
+- [前端 css demo](https://github.com/Lavender-z/demo)
 
-https://sixdegree.github.io/2016/01/02/Hexo.html
-<img class="image400" src="https://www.codewars.com/users/FE-ng/badges/large"  alt="效果图" />
+## 娱乐
+
+- [小霸王游戏站](https://www.yikm.net/)
+- [波动绘图](http://weavesilk.com/)
+- [do your music](https://aidn.jp/mikutap/)
+- [useless website](https://theuselessweb.com/)
+- [互动小游戏](https://neave.com/)
+
+  https://sixdegree.github.io/2016/01/02/Hexo.html
+  <img class="image400" src="https://www.codewars.com/users/FE-ng/badges/large"  alt="效果图" />
 
 参考文献:
 作者：前端森林
