--- a/source/_posts/bugs的启发/零宽字符.md
+++ b/source/_posts/bugs的启发/零宽字符.md
@@ -32,6 +32,15 @@ tags:
 1. 后端接收时处理
 2. 前端输入时处理（input inputText）类似 falsyParamsFilter 函数
 
+```js
+const formatData = (data: string) =>
+  data
+    .split(/,|，/g)
+    .map((i: string) => i.replace(/^\s*|\s*$|\s*\u200B/g, ''))
+    .filter((i: string) => !!i)
+    .join(',');
+```
+
 # 更多有趣的事情
 
 1. 颜文字 象形字 图像 icon
