feat(docs): 整理标题与简介图

--- a/source/_posts/leetcode/两数之和.md
+++ b/source/_posts/leetcode/两数之和.md
@@ -1,3 +1,13 @@
+---
+title: 两数之和
+cover: https://cdn.jsdelivr.net/gh/FE-ng/picGo/blog/202112231540081.png
+date: 021-07-15 00:50:14
+categories:
+  - 算法
+tags:
+  - leetCode
+---
+
 <!--
  * @Author: your name
  * @Date: 2021-07-15 00:50:14
